--- a/EmailSender/EmailSender/App.config
+++ b/EmailSender/EmailSender/App.config
@@ -3,6 +3,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<appSettings>
+		<add key = "SenderName"  value = "DevEducation"/>
+		<add key = "SenderEmail"  value = "ruberd724@gmail.com"/>
+		<add key = "Password"  value = "!@14kLm703"/>
+		<add key = "SmtpServer"  value = "smtp.gmail.com"/>
+		<add key = "Port"  value = "587"/>
+		<add key = "MessageHeader"  value = "Notification of status changes"/>		
+	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
