--- a/EmailSender/EmailSender/packages.config
+++ b/EmailSender/EmailSender/packages.config
@@ -5,7 +5,9 @@
   <package id="MailKit" version="2.9.0" targetFramework="net472" />
   <package id="MassTransit" version="7.0.6" targetFramework="net472" />
   <package id="MassTransit.RabbitMQ" version="7.0.6" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="MimeKit" version="2.9.2" targetFramework="net472" />
   <package id="NewId" version="3.0.2" targetFramework="net472" />
